--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,11 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Scraper files
-scraper.py
+# Scraper output files (now using database)
 permits_output*/
+
+# Environment variables (contains database credentials)
+.env
+
+# Claude Code
 .claude/
